# ember

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MAINTAINER_GUIDE.md  README.md  RELEASE_NOTES.md  TODO.md  main.py  prd.md  profile_installed.py  profile_model_loading.py  profile_startup.py  pyproject.toml  reinstall.sh  test_daemon_performance.py
.claude/commands/: audit.md  default.md  integration-test.md
docs/: ARCHITECTURE.md  AUDIT.md  AUDIT_SUMMARY.md  PERFORMANCE.md  SCOPE_v0.2.0.md  TEST_ANALYSIS_INDEX.md  TEST_FIXES_EXAMPLES.md  TEST_SUITE_ANALYSIS.md  TEST_SUITE_SUMMARY.md  progress.md
docs/archive/: README.md  UAT.md
docs/decisions/: 001-clean-architecture-layers.md  002-sqlite-storage.md  003-embedding-model-choice.md
docs/designs/: daemon-architecture.md
ember/: version.py
ember/adapters/: factory.py
ember/adapters/config/: __init__.py  toml_config_provider.py
ember/adapters/daemon/: __init__.py  __main__.py  client.py  lifecycle.py  protocol.py  server.py  timeouts.py
ember/adapters/editor/: __init__.py
ember/adapters/fs/: local.py
ember/adapters/fts/: sqlite_fts.py
ember/adapters/git_cmd/: __init__.py  git_adapter.py
ember/adapters/local_models/: __init__.py  bge_embedder.py  jina_embedder.py  minilm_embedder.py  oom_retry.py  registry.py
ember/adapters/parsers/: definition_matcher.py  language_registry.py  line_chunker.py  tree_sitter_chunker.py
ember/adapters/sqlite/: __init__.py  base_repository.py  chunk_repository.py  file_repository.py  initializer.py  meta_repository.py  schema.py  vector_repository.py
ember/adapters/tui/: __init__.py  search_ui.py
ember/adapters/vss/: simple_vector_search.py  sqlite_vec_adapter.py
ember/core/: cli_utils.py  editor.py  errors.py  hardware.py  languages.py  path_utils.py  progress.py  repo_utils.py  result_display.py  result_lookup.py  use_case_errors.py
ember/core/chunking/: chunk_usecase.py
ember/core/config/: init_usecase.py
ember/core/indexing/: chunk_storage.py  file_detection.py  file_filter.py  file_preprocessor.py  index_usecase.py  orchestrator.py  types.py
ember/core/presentation/: __init__.py  colors.py  compact_renderer.py  context_renderer.py  json_formatter.py  result_presenter.py
ember/core/retrieval/: interactive.py  search_usecase.py
ember/core/status/: __init__.py  status_usecase.py
ember/core/sync/: __init__.py  sync_service.py
ember/domain/: config.py  entities.py  exceptions.py  value_objects.py
ember/entrypoints/: cli.py
ember/ports/: chunkers.py  config.py  daemon.py  database.py  editor.py  embedders.py  fs.py  progress.py  repositories.py  search.py  vcs.py
ember/shared/: config_io.py  state_io.py
tests/: conftest.py
tests/fixtures/: __init__.py  realistic_repo_data.py
tests/helpers/: __init__.py  cli_assertions.py
tests/integration/: test_auto_sync.py  test_cat_syntax_highlighting.py  test_chunk_repository.py  test_cli_commands.py  test_concurrent_and_recovery.py  test_config_workflow.py  test_daemon.py  test_file_repository.py  test_find_context_syntax_highlighting.py  test_git_adapter.py  test_indexing_usecase.py  test_init.py  test_jina_embedder.py  test_missing_chunks_bug.py  test_search_usecase.py  test_sqlite_thread_safety.py  test_subdirectory_support.py  test_sync_error_handling.py
tests/performance/: __init__.py  test_performance.py
tests/unit/: test_chunk_usecase.py  test_config_commands.py  test_config_provider.py  test_definition_matcher.py  test_ensure_synced.py  test_init_helpers.py  test_language_registry.py  test_line_chunker.py  test_sync_feedback.py  test_tree_sitter_chunker.py  test_version.py
tests/unit/adapters/: test_bge_embedder_unit.py  test_daemon_lifecycle.py  test_daemon_protocol.py  test_daemon_server.py  (+18 more)
(+20 files in other folders)
