[project]
name = "ember"
version = "0.1.0"
description = "Local codebase embedding and search CLI - fast, deterministic, agent-friendly"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Sam @ KamiwazaAI" }
]
keywords = ["code-search", "embeddings", "cli", "semantic-search", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1.0",
    "blake3>=0.4.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "tree-sitter-c-sharp>=0.21.0",
    "tree-sitter-ruby>=0.21.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "tomli-w>=1.2.0",
    "rich>=13.0.0",
]

[project.scripts]
ember = "ember.entrypoints.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=ember --cov-report=term-missing -m 'not slow'"
markers = [
    "slow: marks tests as slow (require model download or heavy computation)",
]
filterwarnings = [
    # Jina model checks for optimum (ONNX optimization library) - not needed for our use case
    "ignore:optimum is not installed.*:UserWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
